--- a/index.qmd
+++ b/index.qmd
@@ -21,9 +21,6 @@ self-contained: true
 execute:
     echo: true
     warning: false
-project:
-    type: website
-    output-dir: docs
 ---
 
 
@@ -36,11 +33,8 @@ library(readxl)
 library(cowplot)
 library(ggthemes)
 library(scales)
-library(gganimate)
 library(lubridate)
-library(ggridges)
 library(ggtext)
-library(glue)
 library(plotly)
 ```
 
@@ -48,7 +42,7 @@ library(plotly)
 ```{r, warning = FALSE, message = FALSE}
 temp <- tempfile()
 
-download.file(url = glue("https://sedlabanki.is/library/Skraarsafn/Fjarmalastodugleiki/FS/2022/isl_Kaflar.xlsx"),
+download.file(url = "https://sedlabanki.is/library/Skraarsafn/Fjarmalastodugleiki/FS/2022/isl_Kaflar.xlsx",
               destfile = temp)
 
 
@@ -83,7 +77,7 @@ p <- d |>
                  expand = expansion()) +
     scale_y_continuous(labels = label_percent(big.mark = ".",
                                               decimal.mark = ","),
-                       breaks = c(0, 1),
+                       breaks = c(0, 0.2, 0.4, 0.6, 0.8, 1),
                        expand = expansion()) +
     scale_fill_brewer(type = "qual", palette = "Set1") +
     theme_half_open() +
@@ -91,7 +85,13 @@ p <- d |>
           axis.text = element_text(size = 10)) +
     labs(x = NULL,
          y = NULL,
+         fill = NULL,
          title = "Dreifing húsnæðislánategunda heimila")
+
+ggsave(plot = p + 
+           theme(legend.position = "top", legend.text = element_text(size = 11)), 
+       filename = "dreifing.png",
+       width = 8, height = 0.5 * 8, scale = 1.3, bg = "white")
 
 ggplotly(p, tooltip = "text")
 ```
@@ -213,6 +213,8 @@ p <- plot_dat |>
          y = NULL,
          title = "Mánaðarleg breyting á húsnæðislánategundum heimila")
 
+ggsave(plot = p, filename = "manbreyting.png",
+       width = 8, height = 0.7 * 8, scale = 1.3, bg = "white")
 
 ggplotly(p, tooltip = "text")
 ```
